deploy: 9fd9c3d6d51a412dcd740e78d489a4f92686a647

--- a/topics/12b_iterator.html
+++ b/topics/12b_iterator.html
@@ -54,7 +54,7 @@
     <script async="async" src="../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Zoeken" href="../search.html" />
-    <link rel="next" title="Practicum interator pattern" href="../exercises/iterator/index.html" />
+    <link rel="next" title="Practicum iterator pattern" href="../exercises/iterator/index.html" />
     <link rel="prev" title="Week 13" href="../course/week_13.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="nl">
@@ -1531,7 +1531,7 @@
     <a class='right-next' id="next-link" href="../exercises/iterator/index.html" title="volgende pagina">
     <div class="prev-next-info">
         <p class="prev-next-subtitle">volgende</p>
-        <p class="prev-next-title">Practicum interator pattern</p>
+        <p class="prev-next-title">Practicum iterator pattern</p>
     </div>
     <i class="fas fa-angle-right"></i>
     </a>
