deploy: f70f76011662b9196d0c3aef4f9336b946bfb8e2

--- a/course/ex_1.html
+++ b/course/ex_1.html
@@ -55,7 +55,7 @@ const thebe_selector_output = ".output, .cell_output"
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Zoeken" href="../search.html" />
     <link rel="next" title="Primitieve gegevenstypen" href="../exercises/8-9_primitive_data.html" />
-    <link rel="prev" title="Hello World" href="../problems/hello_world/index.html" />
+    <link rel="prev" title="Opgaven practicum 1" href="../problems/hello_world/index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="nl">
     
@@ -364,7 +364,7 @@ title="Print to PDF"
         <i class="fas fa-angle-left"></i>
         <div class="prev-next-info">
             <p class="prev-next-subtitle">vorige</p>
-            <p class="prev-next-title">Hello World</p>
+            <p class="prev-next-title">Opgaven practicum 1</p>
         </div>
     </a>
     <a class='right-next' id="next-link" href="../exercises/8-9_primitive_data.html" title="volgende pagina">
