deploy: bf6de6a915fb3df8142c9f747063313ba2a018a5

--- a/topics/9a_design_patterns.html
+++ b/topics/9a_design_patterns.html
@@ -1294,9 +1294,9 @@ title="Print to PDF"
 </tr>
 </thead>
 <tbody>
-<tr class="row-even"><td><p>Abstract Factory<br> Builder<br> <strong>Factory Method</strong><br> Prototype<br> <strong>Singleton</strong></p></td>
-<td><p>Adapter<br> Bridge<br> <strong>Composite</strong><br> <strong>Decorator</strong><br> Facade<br> Flyweight<br> <strong>Proxy</strong></p></td>
-<td><p>Chain of Responsibility<br> <strong>Command</strong><br> Interpreter<br> <strong>Iterator</strong><br> Mediator<br> Memento<br> <strong>Observer</strong><br> <strong>State</strong><br> Strategy<br> <strong>Template Method</strong><br> Visitor</p></td>
+<tr class="row-even"><td><p><strong>Abstract Factory</strong><br> Builder<br> <strong>Factory Method</strong><br> Prototype<br> <strong>Singleton</strong></p></td>
+<td><p><strong>Adapter</strong><br> Bridge<br> <strong>Composite</strong><br> <strong>Decorator</strong><br> <strong>Facade</strong><br> Flyweight<br> Proxy</p></td>
+<td><p>Chain of Responsibility<br> <strong>Command</strong><br> Interpreter<br> <strong>Iterator</strong><br> Mediator<br> Memento<br> <strong>Observer</strong><br> <strong>State</strong><br> <strong>Strategy</strong><br> <strong>Template Method</strong><br> Visitor</p></td>
 </tr>
 </tbody>
 </table>
