deploy: 18115c49635bf7a25905294850cb96e9361095b3

--- a/topics/9a_design_patterns.html
+++ b/topics/9a_design_patterns.html
@@ -1295,7 +1295,7 @@ title="Print to PDF"
 </thead>
 <tbody>
 <tr class="row-even"><td><p><strong>Abstract Factory</strong><br> Builder<br> <strong>Factory Method</strong><br> Prototype<br> <strong>Singleton</strong></p></td>
-<td><p><strong>Adapter</strong><br> Bridge<br> <strong>Composite</strong><br> <strong>Decorator</strong><br> <strong>Facade</strong><br> Flyweight<br> Proxy</p></td>
+<td><p><strong>Adapter</strong><br> Bridge<br> <strong>Composite</strong><br> <strong>Decorator</strong><br> Facade<br> Flyweight<br> Proxy</p></td>
 <td><p>Chain of Responsibility<br> <strong>Command</strong><br> Interpreter<br> <strong>Iterator</strong><br> Mediator<br> Memento<br> <strong>Observer</strong><br> <strong>State</strong><br> <strong>Strategy</strong><br> <strong>Template Method</strong><br> Visitor</p></td>
 </tr>
 </tbody>
